--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,31 @@
   text-align: center;
 }
 
-.logo {
+.home-items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 80vh;
+  text-align: center;
+}
+
+.link {
+  text-decoration: none;
+  font-size: 18px;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.nav-links {
+  display: flex;
+  gap: 20px;
+  padding: 20px;
+}
+
+/* .logo {
   height: 6em;
   padding: 1.5em;
   will-change: filter;
@@ -39,4 +63,4 @@
 
 .read-the-docs {
   color: #888;
-}
+} */
