--- a/src/client/styles/Common.css
+++ b/src/client/styles/Common.css
@@ -7,3 +7,35 @@
     text-align: center;
     font-weight: bold;
 }
+
+.button-container {
+    display: flex; 
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+}
+
+.icon-button {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
+}
+
+.table-container {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 50px;
+    width: 80%;
+    min-height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.message-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
