--- a/src/client/styles/Common.css
+++ b/src/client/styles/Common.css
@@ -39,3 +39,11 @@
     justify-content: center;
     align-items: center;
 }
+
+.logo-container {
+    background-color: #333;
+    padding: 10px;
+    width: 200px;
+    border-radius: 10px;
+    display: inline-block;
+}
